# solar-system

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp  run
libs/: stb_vorbis.c
libs/imgui_demo/src/: Makefile  demo_app
libs/soloud/: soloud.cpp  soloud.h
libs/soloud/coreaudio/: soloud_coreaudio.cpp
libs/soloud/miniaudio/: soloud_miniaudio.cpp
planet/: audio.cpp  audio.h  billboard.cpp  billboard.h  camera.h  mesh.h  model.h  planet.cpp  planet.hpp  shader.h
relatorio CG/: ack_res_kw.tex  acronimos.tex  bibliografia.bib  capa.tex  capitulo-2.tex  conc-trab-futuro.tex  introducao.tex  relatorio-projeto.lot  relatorio-projeto.tex
resources/models/asteroid/: rock.mtl
resources/models/earth/: earth.mtl
resources/models/jupiter/: jupiter.mtl
resources/models/mars/: mars.mtl
resources/models/mercury/: mercury.mtl
resources/models/moon/: moon.mtl
resources/models/neptune/: neptune.mtl
resources/models/saturn/: saturn.mtl
resources/models/sun/: sun.mtl
resources/models/uranus/: uranus.mtl
resources/models/venus/: venus.mtl
resources/shaders/: asteroids.vs  blur.frag  earth.frag  framebuffer.frag  framebuffer.vs  lamp.frag  path.frag
